--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
             <div class="ui container">
                 <h1>NeoPixel Animation for Microsoft MakeCode</h1>
                 <p>
-                    <a href="https://learn.adafruit.com/circuit-playground-neoanim-using-bitmaps-to-animate-neopixels/from-pixels-to-neopixels">
-                neopixel animations using <a href="https://makecode.adafruit.com">Microsoft MakeCode</a>.
-                </a>!
+                    <a href="https://learn.adafruit.com/circuit-playground-neoanim-using-bitmaps-to-animate-neopixels/from-pixels-to-neopixels">Paint your NeoPixel animations</a> and convert them
+                    to <a href="https://makecode.adafruit.com">Microsoft MakeCode</a>.
                 </p>
             </div>
         </div>
         <div class="ui vertical stripe segment">
             <div class="ui container">
                 <div class="ui info message">
-                    Copy and paste your animation image in this page. Make sure it is 10 pixel high and uses less than 256 color tones.
+                    <strong>Copy and paste your animation image in this page.</strong> Make sure it is 10 pixel high and uses less than 256 color tones.
                 </div>
                 <div id="preview">
                 </div>
