--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
                 img.onload = function () {
                     var w = img.width;
                     var h = img.height;
+                    console.log(`w: ${w}, h: ${h}`)
 
                     var cvs = document.createElement('canvas');
                     var ctx = cvs.getContext("2d");
                     ctx.drawImage(img, 0, 0, w, h, 0, 0, w, h);
                     var imgData = ctx.getImageData(0, 0, w, h)
-                    console.debug(`data: ${imgData.data.length} bytes`)
+                    console.log(`data: ${imgData.data.length} bytes`)
 
                     // quantize palette
                     var data = imgData.data;
@@ -81,6 +82,7 @@
                         quant[data[i]] = (quant[data[i]] || 0) + 1;
                     }
                     var palette = Object.keys(quant);
+                    console.log(`palette: ${palette.length}`)
                     console.debug(palette);
                     if (palette.length > 0xff) {
                         preview.innerText = 'too many colors... save your png to a 8bit palette';
@@ -109,9 +111,11 @@
                         }
                     }
 
+                    console.log(`buffer: ${out.length}`);
+
                     // generate TS
                     var ts =
-                        `const animationData = hex\`${out.map(function (c, i) { return (c & 0xff).toString(16).toUpperCase() + (i % 80 == 79 ? '\n' : ''); }).join('')}\`;
+                        `const animationData = hex\`${out.map(function (c, i) { return  ('0' + (c & 0xFF).toString(16)).slice(-2) + (i % 80 == 79 ? '\n' : ''); }).join('')}\`;
 const animation = light.animationSheet(animationData, 50);
 `
 
