--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
 
                     // generate TS
                     var ts =
-                        `const animationData = hex\`${out.map(function (c, i) { return  ('0' + c.toString(16)).slice(-2) + (i % 80 == 79 ? '\n' : ''); }).join('')}\`;
-const animation = light.animationSheet(animationData, 50);
+`const animation = light.animationSheet(hex \`${out.map(function (c, i) { return  ('0' + c.toString(16)).slice(-2) + (i % 80 == 79 ? '\n' : ''); }).join('')}\`, 50);
+loops.forever(() => {
+    light.pixels.showAnimationFrame(animation);
+})
 `
 
                     output.innerText = ts;
