--- a/index.html
+++ b/index.html
@@ -160,15 +160,18 @@
     
                     // generate TS
                     if (hosted) {
+                        var varName = `_${fileName}Animation`;
                         var ts =
                         `namespace light {
+    let ${varName}: light.NeoPixelAnimation;
     /*
     * An animation created with neo-anim
     */
     //% block
     export function ${fileName}Animation() {
-        const animation = light.animationSheet(hex \`${out.map(function (c, i) { return ('0' + c.toString(16)).slice(-2) + (i % 80 == 79 ? '\n' : ''); }).join('')}\`, 50);
-        light.pixels.showAnimationFrame(animation);
+        if (!${varName})
+            ${varName} = light.animationSheet(hex \`${out.map(function (c, i) { return ('0' + c.toString(16)).slice(-2) + (i % 80 == 79 ? '\n' : ''); }).join('')}\`, 50);
+        light.pixels.showAnimationFrame(${varName});
     }
 }
     `
