fixing code generation

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ namespace light {
     */
     //% block
     export function ${fileName}Animation(): NeoPixelAnimation {
-        return light.animationSheet(hex \`${usercode[fileName]}\`, 50);
+        return light.animationSheet(hex \`${usercode[fileName]}\`);
     }
 `
                 })
